<resources>
    <string name="app_name">AndroidNextGen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="score_title">Average Sat Scores:</string>
    <string name="label_critical_reading">Critical reading</string>
    <string name="label_math">Math</string>
    <string name="label_writing">Writing</string>
    <string name="label_retry">Retry</string>

    <string name="error_title">Error</string>
    <string name="error_desc">"Couldn\'t complete request. try again later."</string>
    <string name="error_no_data">"No data found."</string>
    <string name="button_ok">Ok</string>

    <string name="menu_actions">Actions</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_settings">Settings</string>

</resources>