...
            app:layout_constraintTop_toBottomOf="@id/action_details_description">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin">
                <TextView
                    android:id="@+id/action_details_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    style="@style/BigText"
                    android:layout_marginBottom="@dimen/xlarge_margin"
                    android:text="@string/score_title"
...
